src/snapshots/alma__infer__tests__test_infer_expression__if-3.snap
---
source: src/infer.rs
assertion_line: 2257
expression: "infer(\"if 1 == 1 then if 1 + 1 > 2 then 5 else 1 / 1 else 2 + 2\")"
---
Input:

if 1 == 1 then if 1 + 1 > 2 then 5 else 1 / 1 else 2 + 2

---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ ∅ . Float
