src/snapshots/alma__infer__tests__test_infer_expression__infinite_type.snap
---
source: src/infer.rs
assertion_line: 2381
expression: "infer(r\"\\a -> a 1 a\")"
---
Input:

\a -> a 1 a

---
Output:

Test.alma [3:13]

Infinite type

  1│  module Test exposing (test)
  2│  
  3│  test = \a -> a 1 a
   │               ↑↑↑↑↑
