src/snapshots/alma__infer__tests__test_infer_expression__lambdas_and_application-4.snap
---
source: src/infer.rs
assertion_line: 2226
expression: "infer(r\"\\n -> \\f -> \\x -> f (n f x)\")"
---
Input:

\n -> \f -> \x -> f (n f x)

---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ a b c . ((a -> b) -> c -> a) -> (a -> b) -> c -> b
