src/snapshots/alma__infer__tests__test_infer_expression__lambdas_and_application-5.snap
---
source: src/infer.rs
assertion_line: 2228
expression: "infer(r\"\\m -> \\n -> \\f -> \\x -> m (n f) x\")"
---
Input:

\m -> \n -> \f -> \x -> m (n f) x

---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ a b c d . (a -> b -> c) -> (d -> a) -> d -> b -> c
