src/snapshots/alma__infer__tests__test_infer_expression__let_generalization-2.snap
---
source: src/infer.rs
assertion_line: 2244
expression: "infer(r\"\n      \\x ->\n        let y = \\z -> x\n        y\n      \")"
---
Input:


      \x ->
        let y = \z -> x
        y
      

---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ a b . a -> b -> a
